--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/grpc-ecosystem/grpc-opentracing"
+
+[[constraint]]
+  name = "github.com/coreos/etcd"
+  version = "3.3.8"
