--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "github.com/coreos/etcd"
   version = "3.3.8"
+
+[[constraint]]
+  name = "github.com/uber/jaeger-lib"
+  version = "1.5.0"
